--- a/Go-MInd/app/build.gradle
+++ b/Go-MInd/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation libs.material
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -80,8 +81,8 @@ dependencies {
     implementation ("com.squareup.okhttp3:okhttp-urlconnection:4.11.0")
     implementation 'ru.yoomoney.sdk.kassa.payments:yookassa-android-sdk:6.10.0'
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
- //   implementation platform("ru.rustore.sdk:bom:7.0.0")
-  //  implementation "ru.rustore.sdk:billingclient"
+    //   implementation platform("ru.rustore.sdk:bom:7.0.0")
+    //  implementation "ru.rustore.sdk:billingclient"
     implementation platform(libs.rustore.sdk.bom)
     implementation libs.rustore.sdk.billingclient
 
